<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editCurrentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Current password"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="New password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/editCurrentPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Confirm new password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/editNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
