<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Titolo -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="Password and Authentication"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Change Password -->
    <TextView
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="Change Password"
        android:visibility="visible"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:clickable="true" />


</RelativeLayout>