<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Titolo -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ScrollView con contenuti -->
    <ScrollView
        android:id="@+id/settingsScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Signed in as -->
            <TextView
                android:id="@+id/username"
                style="@style/ClickableListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Signed in as"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <!-- Logout -->
            <TextView
                android:id="@+id/signOut"
                style="@style/ClickableListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Logout"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Impostazioni utente -->
            <TextView
                android:id="@+id/security"
                style="@style/ClickableListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="Password and authentication" />

            <TextView
                android:id="@+id/firstName"
                style="@style/ClickableListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First name" />

            <TextView
                android:id="@+id/lastName"
                style="@style/ClickableListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Last name" />

            <TextView
                android:id="@+id/email"
                style="@style/ClickableListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email address" />

            <TextView
                android:id="@+id/cancel"
                style="@style/ClickableListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete account"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
