...
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.musicboxd.fragments.SettingsFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_PasswordandAuthentication"
            app:destination="@id/changePassword" />
    </fragment>

    <!-- Fragment password-->
    <fragment
        android:id="@+id/changePassword"
...
